--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,12 @@
         tools:targetApi="31">
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".SelectOptionAuthActitivty"/>
         <activity
             android:name=".RegisterActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".SelectOptionAuthActitivty"/>
         <activity
             android:name=".SelectOptionAuthActitivty"
             android:exported="false"
