--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
-    </uses-permission>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,17 +15,20 @@
         android:theme="@style/Theme.NavigationApp"
         tools:targetApi="31">
         <activity
+            android:name=".ClientMapActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false"
-            android:parentActivityName=".SelectOptionAuthActitivty"/>
+            android:parentActivityName=".SelectOptionAuthActitivty" />
         <activity
             android:name=".RegisterActivity"
             android:exported="false"
-            android:parentActivityName=".SelectOptionAuthActitivty"/>
+            android:parentActivityName=".SelectOptionAuthActitivty" />
         <activity
             android:name=".SelectOptionAuthActitivty"
             android:exported="false"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
